--- a/P1_ConnectionBus/WebClientComponent/MainWindow.xaml
+++ b/P1_ConnectionBus/WebClientComponent/MainWindow.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Button Content="Button" HorizontalAlignment="Left" Margin="193,79,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <TextBox x:Name ="requestTextBox" HorizontalAlignment="Left" Height="23" Margin="83,32,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="294"/>
-        
+        <Label x:Name ="outLabel" Content="" HorizontalAlignment="Left" Margin="83,230,0,0" VerticalAlignment="Top" Width="294"/>
+
     </Grid>
 </Window>
